# SleepAgent

./: .dockerignore  .env.example  .gitignore  AGENTS.md  MVP_SCOPE.md  PROJECT_PLAN.md  README.md  RealSleepAgent_v1.md  TASK_LOG.md  compose.shhs-demo.yaml  compose.yaml  pyproject.toml
backend/: __init__.py  main.py
docker/: Dockerfile  frontend.Dockerfile
docs/: CHANGELOG.md  DATA_CONTRACTS.md  DEVELOPMENT_ROADMAP.md  SHHS_LOCAL_DATA.md  STAGE10_SHHS_DEMO.md
frontend/: __init__.py  api_client.py  app.py  package-lock.json  package.json  tailwind.config.ts
scripts/: analyze_yasa_batch_metrics.py  analyze_yasa_shhs_confusion.py  check_shhs_zip.py  compare_yasa_channel_evaluations.py  evaluate_yasa_staging_against_shhs_xml.py  generate_mock_sleep_data.py  init_postgres.py  inspect_shhs_annotation.py  run_agent_orchestration_smoke.py  run_deepseek_report_smoke.py  run_real_task_e2e_check.py  run_respiratory_stage6_experiment.py  run_respiratory_stage6_smoke.py  run_stage10_shhs_demo.py  run_yasa_sleep_staging_batch_from_zip.py  run_yasa_sleep_staging_sample.py  seed_report_chroma.py  summarize_shhs_sample.py
sleepagent/: __init__.py
tests/: __init__.py  test_agent_orchestration_endpoint.py  test_agent_orchestration_smoke_script.py  test_analysis_service.py  test_check_shhs_zip.py  test_classification_metrics.py  test_frontend_api_client.py  test_health.py  test_mock_analysis_endpoint.py  test_mock_data.py  test_mock_json_contracts.py  test_mock_report_endpoint.py  test_phase2_task_api.py  test_phase4_artifacts.py  test_phase4_postgres_schema.py  test_phase5_safety_gate.py  test_real_task_e2e_check.py  test_report_chroma.py  test_report_knowledge.py  test_report_llm.py  test_report_retrievers.py  (+36 more)
(+102 files in other folders)
