[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sleepagent"
version = "0.1.0"
description = "MVP skeleton for an intelligent sleep health analysis system."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115",
    "uvicorn",
    "streamlit",
    "pydantic",
    "pytest",
    "httpx>=0.27",
    "numpy",
]

[project.optional-dependencies]
model = [
    "torch>=2.0",
]
rag = [
    "chromadb>=0.5",
]
agent = [
    "langgraph>=0.2",
]
postgres = [
    "psycopg[binary]>=3.2",
]

[tool.setuptools.packages.find]
include = ["sleepagent*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
