[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sleepagent"
version = "0.1.0"
description = "MVP skeleton for an intelligent sleep health analysis system."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115",
    "uvicorn",
    "streamlit",
    "pydantic",
    "pytest",
    "httpx>=0.27",
    "numpy",
]

[project.optional-dependencies]
model = [
    "torch>=2.0",
]
experiments = [
    "numpy>=1.26,<2",
    "pandas>=1.5,<3",
    "scipy>=1.10,<1.14",
    "scikit-learn>=1.2,<1.6",
    "torch>=2.2,<2.3",
    "mne>=1.6,<1.10",
    "yasa>=0.6.5,<0.7",
    "pyEDFlib>=0.1.36,<0.2",
]
rag = [
    "chromadb>=0.5",
]
agent = [
    "langgraph>=0.2",
]
postgres = [
    "psycopg[binary]>=3.2",
]

[tool.setuptools.packages.find]
include = ["sleepagent*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
